[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covidashflow"
version = "1.0.0"
description = "Airflow ETL pipelines for COVIDash.it data collections."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "apache-airflow==2.8.0",
  "apache-airflow-providers-mongo==4.0.0",
  "pandas==2.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
